# SuperNewRolesLauncher

./: .gitignore  CONTRIBUTE.md  README.md  biome.json  index.html  old_styles.css  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  MOD_CONFIG_EDITING.md  RELEASE.md
scripts/: generate-tauri-config.mjs
src/: App.tsx  main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: epic_commands.rs  epic_login_window.rs  finder.rs  game_servers.rs  launch.rs  migration.rs  mod.rs  notifications.rs  presets.rs  reporting.rs  settings.rs  snr.rs  tray.rs
src-tauri/src/services/: game_server_service.rs  launch_service.rs  mod.rs  snr_service.rs
src-tauri/src/utils/: background_notifications.rs  download.rs  epic_api.rs  finder.rs  migration.rs  mod.rs  mod_profile.rs  presets.rs  reporting_api.rs  settings.rs  storage.rs  zip.rs
src/announce/: AnnounceCenter.tsx  announceApi.test.ts  announceApi.ts  types.ts
src/app/: bootstrap.ts  bootstrap.tsx  constants.ts  dom.ts  launchErrorLocalization.test.ts  launchErrorLocalization.ts  modConfig.ts  platformIconPaths.ts  platformSelection.test.ts  platformSelection.ts  socialBrandIcons.test.ts  socialBrandIcons.ts  template.test.ts  template.ts  theme.ts  types.ts
src/game-servers/: GameServersCenter.tsx  join.test.ts  join.ts  roomsApi.test.ts  roomsApi.ts  types.ts
(+55 files in other folders)
