[package]
name = "supernewroleslauncher"
version = "0.1.0"
description = "SuperNewRolesLauncher (Tauri)"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "gzip", "deflate", "stream"] }
futures-util = "0.3"
zip = "2"
url = "2"
urlencoding = "2"
base64 = "0.22"
keyring = "3.6.3"
tauri-plugin-opener = "2"
regex = "1"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
aes = "0.8"
cbc = "0.1"
brotli = "7"
rand = "0.8"
tauri-plugin-notification = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_System_LibraryLoader"] }
